--- a/index.html
+++ b/index.html
@@ -277,7 +277,8 @@
 
 <!-- Supabase SDK y app -->
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-<script src="app.js"></script>
+<script type="module" src="app.js"></script>
 </body>
 </html>
+
 
